backend api for align categories priority
